# bigquery-dashboard

./: .gitignore  .sqlfluff  README.md  app.py  batch.py  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.kiro/specs/bigquery-table-list-dashboard/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/bigquery-table-usage-dashboard/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/bq-dataset-loader/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/dash-dashboard-init/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/table-access-frequency/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/table-importance-scoring/: requirements.md  spec.json
.kiro/steering/: product.md  structure.md  tech.md
sql/: tables.sql
sql/bigquery/: listup_tables.sql
src/: main.py
src/application/usecases/: export_leaf_tables_usecase.py  export_reference_count_usecase.py
src/batch/: __init__.py  config.py  main.py  runner.py
src/bigquery_dashboard/: data.py  model.py
src/bq_table_reference/: __init__.py
src/bq_table_reference/application/: __init__.py  dataset_loader.py  error_handler.py  progress_reporter.py  table_access_counter.py
src/bq_table_reference/domain/: __init__.py  exceptions.py  models.py  protocols.py
src/bq_table_reference/infrastructure/: __init__.py  audit_log_adapter.py  bq_client_adapter.py  info_schema_adapter.py  output_formatters.py
src/dashboard/: __init__.py  app.py  bigquery_client.py  config.py  layout.py  logging_config.py  server.py
src/dashboard/domain/: __init__.py  logging.py  models.py  repositories.py  services.py
src/dashboard/infra/: __init__.py  bigquery.py  cached_repository.py  csv_cache.py  lineage.py
src/dashboard/presentation/: __init__.py  callbacks.py  components.py  layout.py
src/domain/entities/: analyzed_table.py  base.py  lineage.py  table.py
src/domain/repositories/: __init__.py  file_writer_repository.py  lineage_repository.py  table_repository.py
src/domain/value_objects/: deletion_candidate.py  table_id.py  table_type.py  usage_info.py
src/infra/bigquery/: __init__.py  client.py  exceptions.py  table_repository_impl.py
src/infra/bigquery/queries/: __init__.py  table_queries.py
src/infra/file/: __init__.py  exceptions.py  file_writer_impl.py
src/infra/lineage/: __init__.py  client.py  exceptions.py  lineage_repository_impl.py
src/shared/: logging_config.py
src/shared/domain/: __init__.py  models.py  repositories.py  services.py
src/shared/infra/: __init__.py  bigquery.py  console_logger.py  csv_cache.py  lineage.py
tests/: __init__.py  conftest.py  test_version.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_app.py  test_conftest.py  test_layout.py  test_main.py
tests/unit/application/: __init__.py  test_dataset_loader.py  test_progress_and_error_handling.py  test_table_access_counter.py
tests/unit/application/usecases/: __init__.py  test_export_leaf_tables_usecase.py  test_export_reference_count_usecase.py
tests/unit/dashboard/: conftest.py  test_app.py  test_bigquery_client.py  test_config.py  test_layout.py  test_server.py
tests/unit/domain/: __init__.py  test_exceptions.py  test_models.py  test_protocols.py  test_table_access_models.py
tests/unit/infra/: __init__.py
tests/unit/infrastructure/: __init__.py  test_audit_log_adapter.py  test_bq_client_adapter.py  test_info_schema_adapter.py  test_output_formatters.py
(+17 files in other folders)
