[project]
name = "bq-table-reference"
version = "0.1.0"
description = "BigQuery テーブル参照分析ツール"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "google-cloud-bigquery>=3.0.0",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=9.0.1",
  "ruff>=0.14.6",
  "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
addopts = [
  "-v",
  "--strict-markers",
  "-ra",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
markers = [
  "integration: 統合テスト（実際の BigQuery API を使用）",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.taskipy.tasks]
format = "uv run ruff format"
lint = "uv run ruff check"
test = "uv run pytest"
test-integration = "uv run pytest tests/integration -v -m integration"
test-unit = "uv run pytest tests/unit -v"
type-check = "uv run pyright"
